--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,74 +1,7 @@
 - content_for :head do
   = stylesheet_link_tag 'map'
   = javascript_include_tag 'vendor/GeoJSON', 'map-helpers'
-  :javascript
-    var map;
-
-    function initialize() {
-      var pathname = window.location.pathname;
-      var myLatlng = new google.maps.LatLng(30.375, 69.345);
-      var myOptions = {
-        zoom: 6,
-        center: myLatlng,
-        mapTypeId: google.maps.MapTypeId.TERRAIN,
-        zoomControl: true,
-        zoomControlOptions: {
-              style: google.maps.ZoomControlStyle.SMALL
-        }
-      }
-      map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
-
-      var fullScreenControlDiv = document.createElement('DIV');
-      var fullScreenControl = new ToggleFullScreen(fullScreenControlDiv, map);
-
-      fullScreenControlDiv.index = 1;
-      map.controls[google.maps.ControlPosition.LEFT_TOP].push(fullScreenControlDiv);
-
-      $.getJSON(pathname+'.json', function(geojson) {
-        province = new GeoJSON(geojson, null);
-        province.setMap(map);
-      });
-
-      $.getJSON(pathname+'/events.json', function(geojson) {
-        $.each(geojson.features, function(i, feature) {
-          var event_marker = new GeoJSON(feature.geometry, null);
-          event_marker.setMap(map);
-          var content_string = renderJSON(feature.properties);
-          var info_window = new google.maps.InfoWindow({content: content_string});
-          google.maps.event.addListener(event_marker, 'click', function() {
-            info_window.open(map, event_marker);
-          });
-        })
-      });
-    }
-
-    function loadScript() {
-      var script = document.createElement("script");
-      script.type = "text/javascript";
-      script.src = "http://maps.google.com/maps/api/js?sensor=false&callback=initialize";
-      document.body.appendChild(script);
-    }
-
-    window.onload = loadScript;
-
-    // ==================== Handle WebSocket messages ====================
-    $(document).ready(function() {
-
-      ws.onmessage = function(e) {
-        feature = JSON.parse(e.data);
-        if (feature.properties.project_id == "#{@project.id}") {
-          console.log(feature);
-          marker_opts = { animation: google.maps.Animation.DROP }
-          var event_marker = new GeoJSON(feature.geometry, marker_opts);
-          event_marker.setMap(map);
-          var content_string = renderJSON(feature.properties);
-          var info_window = new google.maps.InfoWindow({content: content_string});
-          google.maps.event.addListener(event_marker, 'click', function() {
-            info_window.open(map, event_marker);
-          });
-        }
-      }
-    }); // document ready
+  = render 'js/show-map_js'
 
 #map
   #map_canvas
