--- a/app/views/projects/show.mobile.haml
+++ b/app/views/projects/show.mobile.haml
@@ -1,73 +1,12 @@
 - content_for :head do
   = stylesheet_link_tag 'map'
   = javascript_include_tag 'vendor/GeoJSON', 'map-helpers'
-  :javascript
-    var map;
-
-    function initialize() {
-      detectBrowser();
-      // var pathname = window.location.pathname;
-      var pathname = "#{project_path(@project)}"
-      var myLatlng = new google.maps.LatLng(30.375, 69.345);
-      var myOptions = {
-        zoom: 6,
-        center: myLatlng,
-        mapTypeId: google.maps.MapTypeId.TERRAIN
-      }
-      map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
-
-      $.getJSON(pathname+'.json', function(geojson) {
-        province = new GeoJSON(geojson, null);
-        province.setMap(map);
-      });
-
-      $.getJSON(pathname+'/events.json', function(geojson) {
-        $.each(geojson.features, function(i, feature) {
-          var event_marker = new GeoJSON(feature.geometry, null);
-          event_marker.setMap(map);
-          var content_string = renderJSON(feature.properties);
-          var info_window = new google.maps.InfoWindow({content: content_string});
-          google.maps.event.addListener(event_marker, 'click', function() {
-            info_window.open(map, event_marker);
-          });
-        })
-      });
-      google.maps.event.trigger(map, 'resize');
-    }
-
-    function loadScript() {
-      var script = document.createElement("script");
-      script.type = "text/javascript";
-      script.src = "http://maps.google.com/maps/api/js?sensor=false&callback=initialize";
-      document.body.appendChild(script);
-    }
-
-    window.onload = loadScript;
-
-    // ==================== Handle WebSocket messages ====================
-    $(document).ready(function() {
-
-      ws.onmessage = function(e) {
-        feature = JSON.parse(e.data);
-        if (feature.properties.project_id == "#{@project.id}") {
-          console.log(feature);
-          marker_opts = { animation: google.maps.Animation.DROP }
-          var event_marker = new GeoJSON(feature.geometry, marker_opts);
-          event_marker.setMap(map);
-          var content_string = renderJSON(feature.properties);
-          var info_window = new google.maps.InfoWindow({content: content_string});
-          google.maps.event.addListener(event_marker, 'click', function() {
-            info_window.open(map, event_marker);
-          });
-        }
-      }
-
-    });
+  = render 'js/show-map_js'
 
 #header{"data-role" => "header"}
-  =link_to "Projects", projects_path, :rel => "external", "data-icon" => "arrow-l"
+  =link_to t(:projects), projects_path, :rel => "external", "data-icon" => "arrow-l"
   %h1= @project.title
-  =link_to "New", new_project_event_path(@project), :rel => "external", "data-icon" => "plus", :class => "ui-btn-right"
+  =link_to t(:new), new_project_event_path(@project), :rel => "external", "data-icon" => "plus", :class => "ui-btn-right"
 
 #content{"data-role" => "content", :style => "height:100%"}
   #map_canvas{:style => "width:100%; height:100%"}
