--- a/app/views/sectors/show.html.haml
+++ b/app/views/sectors/show.html.haml
@@ -1,6 +1,7 @@
-%p#notice= notice
+%header
+  %p= @sector.name
 
+.projects
+  =render :partial => 'projects/project', :collection => @sector.projects
 
-= link_to 'Edit', edit_sector_path(@sector)
-\|
-= link_to 'Back', sectors_path
+= link_to raw("&larr; #{t(:back_to_sectors)}"), sectors_path
