Refactor model_title_links
removed projects/_sectors.html.haml

--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -7,7 +7,7 @@
   #map_canvas
 
 .project
-  =project_title_links(@project)
+  =model_title_links(@project)
   .project-location= @project.location.name
   .project-description= @project.description
   .project-time
