Added translations for header links and removed notice.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,8 +12,8 @@
       = yield :header
     #nav
       %ul
-        %li=link_to 'Projects', projects_url
-        %li=link_to 'Sectors', sectors_url
-        %li=link_to 'Partners', partners_url
+        %li=link_to t(:projects), projects_url
+        %li=link_to t(:sectors), sectors_url
+        %li=link_to t(:partners), partners_url
     %p#notice= notice
     = yield
