--- a/app/views/partners/show.mobile.haml
+++ b/app/views/partners/show.mobile.haml
@@ -2,4 +2,8 @@
   =link_to t(:partners), partners_path, "data-icon" => "arrow-l", "data-rel"=>'back'
   %h1= @partner.name
 
+#content{'data-role' => 'content'}
+  %ul{'data-role' => 'listview'}
+    = render :partial => 'projects/project', :collection => @partner.projects
+
 = render 'footer'
