Only allow creation of new events via mobile interface.

--- a/app/views/projects/index.mobile.haml
+++ b/app/views/projects/index.mobile.haml
@@ -3,7 +3,7 @@
 #header{'data-role' => 'header'}
   %h1
     = t(:projects)
-  =link_to t(:new), new_project_path, 'data-icon' => 'plus', :class => 'ui-btn-right'
+  /=link_to t(:new), new_project_path, 'data-icon' => 'plus', :class => 'ui-btn-right'
 
 #content{'data-role' => 'content'}
   %ul{'data-role' => 'listview'}
