--- a/app/views/partners/index.mobile.haml
+++ b/app/views/partners/index.mobile.haml
@@ -2,13 +2,13 @@
 
 #header{'data-role' => 'header'}
   %h1= t(:partners)
-  =link_to t(:new), new_partner_path, 'data-icon' => 'plus', :class => 'ui-btn-right'
+  /=link_to t(:new), new_partner_path, 'data-icon' => 'plus', :class => 'ui-btn-right'
 
 #content{'data-role' => 'content'}
   %ul{'data-role' => 'listview'}
     - @partners.each do |partner|
       %li
         = link_to partner.name, partner
-        = link_to t(:edit), edit_partner_path(partner), 'data-icon' => 'gear'
+        /= link_to t(:edit), edit_partner_path(partner), 'data-icon' => 'gear'
 
 = render 'footer'
