Added location tab for the html views.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,5 +15,6 @@
         %li=link_to t(:projects), projects_url
         %li=link_to t(:sectors), sectors_url
         %li=link_to t(:partners), partners_url
+        %li=link_to t(:locations), locations_url
     %p#notice= notice
     = yield
