Refactored _footer.mobile to be shared by using view helpers to workout the class and rel values.
Added Location footer.
Added MobileHelper module.
Removed duplicate footer partials.

--- a/app/views/partners/index.mobile.haml
+++ b/app/views/partners/index.mobile.haml
@@ -11,4 +11,4 @@
         = link_to partner.name, partner
         /= link_to t(:edit), edit_partner_path(partner), 'data-icon' => 'gear'
 
-= render 'footer'
+= render 'shared/footer'
