--- a/app/views/partners/show.mobile.haml
+++ b/app/views/partners/show.mobile.haml
@@ -6,4 +6,4 @@
   %ul{'data-role' => 'listview'}
     = render :partial => 'projects/project', :collection => @partner.projects
 
-= render 'footer'
+= render 'shared/footer'
