--- a/app/views/sectors/index.mobile.haml
+++ b/app/views/sectors/index.mobile.haml
@@ -11,4 +11,4 @@
         = link_to sector.name, sector
         /= link_to t(:edit), edit_sector_path(sector), 'data-icon' => 'gear'
 
-= render 'footer'
+= render 'shared/footer'
