--- a/app/views/events/new.mobile.haml
+++ b/app/views/events/new.mobile.haml
@@ -7,7 +7,7 @@
 %div{ 'data-role' => 'header', 'data-position' => 'fixed' }
   =link_to t(:cancel), project_path(@project), :rel => 'external', 'data-icon' => 'delete'
   %h1
-    = t(:new_Event)
+    = t(:new_event)
   = link_to t(:save), '#', :rel => 'external', 'data-icon' => 'check', :id => 'save_button'
 
 %div{ 'data-role' => 'content' }
