Initial setup of devise.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,4 +18,6 @@
         %li=link_to t(:partners), partners_url
         %li=link_to t(:locations), locations_url
     %p#notice= notice
+    %p#alert= alert
+
     = yield
