Added login/logout links and added cancan for the models.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
       = hoptoad_javascript_notifier
     = render :partial => 'shared/includes'
     = render :partial => 'shared/locale_links'
+    = render :partial => 'shared/login_links'
     = yield :head
   %body
     #header
