Fixed translations for partners, events and projects.

--- a/app/views/locations/edit.html.haml
+++ b/app/views/locations/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @location
+= link_to t(:show), @location
 \|
-= link_to 'Back', locations_path
+= link_to t(:back), locations_path
