Added Login to mobile view.

--- a/app/views/locations/show.mobile.haml
+++ b/app/views/locations/show.mobile.haml
@@ -1,6 +1,10 @@
 #header{"data-role" => "header"}
   =link_to t(:locations), locations_path, "data-icon" => "arrow-l", "data-rel"=>'back'
   %h1= @location.name
+  - if user_signed_in?
+    = link_to(t(:logout), destroy_user_session_path, :class => 'ui-btn-right', :rel => 'external')
+  - else
+    = link_to(t(:login), new_user_session_path, :class => 'ui-btn-right', 'data-rel' => 'dialog', 'data-transition' => 'pop')
 
 #content{'data-role' => 'content'}
   %ul{'data-role' => 'listview'}
