--- a/app/views/partners/index.mobile.haml
+++ b/app/views/partners/index.mobile.haml
@@ -2,6 +2,10 @@
 
 #header{'data-role' => 'header'}
   %h1= t(:partners)
+  - if user_signed_in?
+    = link_to(t(:logout), destroy_user_session_path, :class => 'ui-btn-right', :rel => 'external')
+  - else
+    = link_to(t(:login), new_user_session_path, :class => 'ui-btn-right', 'data-rel' => 'dialog', 'data-transition' => 'pop')
   /=link_to t(:new), new_partner_path, 'data-icon' => 'plus', :class => 'ui-btn-right'
 
 #content{'data-role' => 'content'}
