Added missing partners and sectors edit and new forms.

--- a/app/views/sectors/edit.html.haml
+++ b/app/views/sectors/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing sector
+%h1
+  =t(:editing_sector)
 
 = render 'form'
 
-= link_to 'Show', @sector
+= link_to t(:show), @sector
 \|
-= link_to 'Back', sectors_path
+= link_to t(:back), sectors_path
