--- a/app/views/partners/_form.html.haml
+++ b/app/views/partners/_form.html.haml
@@ -6,5 +6,13 @@
         - @partner.errors.full_messages.each do |msg|
           %li= msg
 
+  .field
+    = f.label :name
+    %br
+    = f.text_field :name
+  .field
+    = f.label :description
+    %br
+    = f.text_area :description
   .actions
     = f.submit t(:save)
