--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @event , :url => project_events_path(@project) do |f|
+= form_for [@project, @event] do |f|
   -if @event.errors.any?
     #error_explanation
       %h2= "#{pluralize(@event.errors.count, "error")} prohibited this event from being saved:"
