--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -1,9 +1,10 @@
-.event{:class => "#{dom_class_first(event, event.project.events)} #{cycle('odd', 'even')}"}
-  .event-title= event.title
-  .event-description= event.description
-  / .status-title{:class => "#{dom_id(event.status)}"}=event.status.title
-  .time{:datetime => "#{event.updated_at}"}= event.updated_at.to_formatted_s(:short)
-  -if (can? :update,  event)
-    = link_to_icon 'edit', t(:edit), edit_project_event_path(event.project, event)
-  -if (can? :destroy,  event)
-    = link_to_icon 'destroy', t(:destroy), project_event_path(event.project, event), :confirm => "#{t(:do_you_want_to_delete)} '#{event.title}'?", :method => :delete
+%li
+  .item
+    = event_title_links(event, project)
+    .event-description= event.description
+    / .status-title{:class => "#{dom_id(event.status)}"}=event.status.title
+    .time{:datetime => "#{event.updated_at}"}= event.updated_at.to_formatted_s(:short)
+    / -if (can? :update,  event)
+    /   = link_to_icon 'edit', t(:edit), edit_project_event_path(event.project, event)
+    / -if (can? :destroy,  event)
+    /   = link_to_icon 'destroy', t(:destroy), project_event_path(event.project, event), :confirm => "#{t(:do_you_want_to_delete)} '#{event.title}'?", :method => :delete
