--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,20 +5,34 @@
     %title= content_for?(:title) ? yield(:title) : title_fallback
     /[if (gt IE 8)]
       = hoptoad_javascript_notifier
-    = render :partial => 'shared/includes'
-    = render :partial => 'shared/locale_links'
-    = render :partial => 'shared/login_links'
-    = yield :head
+    = stylesheet_link_tag "web-app-theme/base", "web-app-theme/themes/default/style", "web-app-theme/override", :cache => true
+    = javascript_include_tag :defaults, :cache => true
+    = csrf_meta_tag
   %body
-    #header
-      = yield :header
-    #nav
-      %ul
-        %li=link_to t(:projects), projects_url
-        %li=link_to t(:sectors), sectors_url
-        %li=link_to t(:partners), partners_url
-        %li=link_to t(:locations), locations_url
-    %p#notice= notice
-    %p#alert= alert
-
-    = yield
+    #container
+      #header
+        %h1
+          %a{:href => "/"} Caritas
+        #user-navigation
+          %ul.wat-cf
+            %li
+              - if user_signed_in?
+                = link_to(t(:logout), destroy_user_session_path, :class=>'logout')
+              - else
+                = link_to(t(:login), new_user_session_path, :class=>'login')
+        #main-navigation
+          %ul.wat-cf
+            = yield :nav
+      #wrapper.wat-cf
+        .flash
+          - flash.each do |type, message|
+            %div{:class => "message #{type}"}
+              %p= message
+        #main
+          = yield
+          #footer
+            .block
+              %p
+                Copyright &copy; #{Time.now.year} nomad labs.
+        #sidebar
+          = yield :sidebar
