--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,7 +1,12 @@
-%header
-  %p= t :projects
+- content_for :nav do
+  %li.first.active=link_to t(:projects), projects_url
+  %li=link_to t(:sectors), sectors_url
+  %li=link_to t(:partners), partners_url
+  %li=link_to t(:locations), locations_url
 
--if (can? :create,  Project)
-  .addlink= link_to t(:create_a_new_project), new_project_path
+- content_for :sidebar do
+  .block
+    -if (can? :create,  Project)
+      = link_to t(:create_a_new_project), new_project_path, :class => 'button'
 
 = render @projects
