--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -15,8 +15,8 @@
     %br
     = f.text_area :description
   .field
-    = f.label :admin_level_id
+    = f.label :admin_level
     %br
-    = f.text_field :admin_level_id
+    = f.text_field :admin_level
   .actions
-    = f.submit t(:save)
+    = f.submit 'Save'
