--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -6,22 +6,18 @@
         - @event.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :title
-    %br
-    = f.text_field :title
-  .field
-    = f.label :description
-    %br
-    = f.text_area :description
-  .field
-    = f.hidden_field :geom
-  .field
-    = f.label :address
-    %br
-    = f.text_field :address
+  .field.group
+    = f.label :title, :class => 'label'
+    = f.text_field :title, :class => 'text_field'
+  .field.group
+    = f.label :description, :class => 'label'
+    = f.text_area :description, :class => 'text_area'
+  .field.group
+    = f.hidden_field :geom, :class => 'hidden_field'
+  .field.group
+    = f.label :address, :class => 'label'
+    = f.text_field :address, :class => 'text_field'
     %span.geocode_link=link_to t(:geocode_this_address), nil, :class => 'geocode_address'
-    %br
     %span.geocoding_status Address unverified
-  .actions
-    = f.submit t(:save)
+  .group.navform.wat-cf
+    = f.submit t(:save), :class => 'button'
