--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -6,17 +6,15 @@
         - @location.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    %br
-    = f.text_field :name
-  .field
-    = f.label :description
-    %br
-    = f.text_area :description
-  .field
-    = f.label :admin_level_id
-    %br
-    = f.text_field :admin_level_id
-  .actions
-    = f.submit t(:save)
+  .field.group
+    = f.label :name, :class => 'label'
+    = f.text_field :name, :class => 'text_field'
+  .field.group
+    = f.label :description, :class => 'label'
+    = f.text_area :description, :class => 'text_area'
+  .field.group
+    = f.label :admin_level_id, :class => 'label'
+    = f.text_field :admin_level_id, :class => 'text_field'
+  .group.navform.wat-cf
+    = f.submit t(:save), :class => 'button'
+    = link_to t(:back), locations_path, :class => 'button'
