--- a/app/views/partners/new.html.haml
+++ b/app/views/partners/new.html.haml
@@ -1,6 +1,9 @@
-%h1
-  =t(:new_partner)
+= render :partial => "nav"
 
-= render 'form'
-
-= link_to t(:back), partners_path
+.block
+  .content
+    %h2.title
+      =t(:new_partner)
+    .inner
+      .form
+        = render 'form'
