--- a/app/views/sectors/_form.html.haml
+++ b/app/views/sectors/_form.html.haml
@@ -6,13 +6,12 @@
         - @sector.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    %br
-    = f.text_field :name
-  .field
-    = f.label :description
-    %br
-    = f.text_area :description
-  .actions
-    = f.submit 'Save'
+  .field.group
+    = f.label :name, :class => 'label'
+    = f.text_field :name, :class => 'text_field'
+  .field.group
+    = f.label :description, :class => 'label'
+    = f.text_area :description, :class => 'text_area'
+  .group.navform.wat-cf
+    = f.submit t('save'), :class => 'button'
+    = link_to t(:back), sectors_path, :class => 'button'
