--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -5,19 +5,22 @@
       %ul
         - @event.errors.full_messages.each do |msg|
           %li= msg
-
-  .field.group
-    = f.label :title, :class => 'label'
-    = f.text_field :title, :class => 'text_field'
-  .field.group
-    = f.label :description, :class => 'label'
-    = f.text_area :description, :class => 'text_area'
-  .field.group
-    = f.hidden_field :geom, :class => 'hidden_field'
-  .field.group
-    = f.label :address, :class => 'label'
-    = f.text_field :address, :class => 'text_field'
-    %span.geocode_link=link_to t(:geocode_this_address), nil, :class => 'geocode_address'
-    %span.geocoding_status Address unverified
+  .columns.wat-cf
+    .column.left
+      .field.group
+        = f.label :title, :class => 'label'
+        = f.text_field :title, :class => 'text_field'
+      .field.group
+        = f.label :description, :class => 'label'
+        = f.text_area :description, :class => 'text_area'
+      .field.group
+        = f.hidden_field :geom, :class => 'hidden_field'
+      .field.group
+        = f.label :address, :class => 'label'
+        = f.text_field :address, :class => 'text_field'
+        %span.geocode_link=link_to t(:geocode_this_address), nil, :class => 'geocode_address'
+        %span.geocoding_status Address unverified
+    .column.right
+    
   .group.navform.wat-cf
     = f.submit t(:save), :class => 'button'
