--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,4 +1,10 @@
+-content_for :head do
+  =javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=false'
+
+= render 'js/edit-map_js'
+
 = render :partial => "nav"
+
 .block
   .content
     %h2.title
