--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,10 +5,11 @@
     %title= content_for?(:title) ? yield(:title) : title_fallback
     /[if (gt IE 8)]
       = hoptoad_javascript_notifier
-    = stylesheet_link_tag "web-app-theme/base", "web-app-theme/themes/default/style", "web-app-theme/override", :cache => true
-    = javascript_include_tag :defaults, :cache => true
-    = csrf_meta_tag
+    = render 'shared/includes'
+    = yield :head
   %body
+    #outer
+      = yield :outer
     #container
       #header
         %h1
