--- a/app/views/shared/_includes.html.haml
+++ b/app/views/shared/_includes.html.haml
@@ -1,6 +1,7 @@
-= stylesheet_link_tag 'application', 'scaffold'
+= stylesheet_link_tag "web-app-theme/base", "web-app-theme/themes/default/style", "web-app-theme/override", "map", :cache => true
 = stylesheet_link_tag 'print', :media => 'print'
-= javascript_include_tag :defaults
+
+= javascript_include_tag :defaults, :cache => true
 = javascript_include_tag "vendor/web-socket-js/swfobject", "vendor/web-socket-js/FABridge", "vendor/web-socket-js/web_socket"
 = render 'js/websocket_js'
 
