--- a/public/stylesheets/web-app-theme/override.css
+++ b/public/stylesheets/web-app-theme/override.css
@@ -1,1 +1,57 @@
 /* Override here any style defined by web-app-theme */
+.inner .columns .column {
+  width: 48%;
+}
+
+.inner .columns .left {
+  float: left;
+}
+
+.inner .columns .right {
+  float: right;
+}
+
+input.button {
+  color: #222;
+  display:block;
+  float:left;
+  margin:0 7px 0 0;
+  background-color: #eee;
+  border:1px solid #bfbfbf;
+  font-size: 1em;
+  line-height: 1.3em;
+  font-weight:bold;
+  cursor:pointer;
+  padding:5px 10px 6px 7px;
+  text-decoration: none;
+}
+
+input.button {
+  width:auto;
+  overflow:visible;
+  padding:4px 10px 3px 7px; /* IE6 */
+}
+input.button[type] {
+  padding:5px 10px 5px 7px; /* Firefox */
+  line-height:17px; /* Safari */
+}
+
+input.button[type] {
+  padding:4px 10px 3px 7px; /* IE7 */
+}
+
+input.button img {
+  margin:0 3px -3px 0 !important;
+  padding:0;
+  border:none;
+  width:16px;
+  height:16px;
+}
+
+input.button:hover {
+  background-color:#dedede;
+}
+
+input.button:active {
+  background-color:#e5e5e5;
+}
