Fixed map resize.

--- a/app/views/js/_show-map_js.haml
+++ b/app/views/js/_show-map_js.haml
@@ -8,6 +8,7 @@
       zoom: 6,
       center: myLatlng,
       mapTypeId: google.maps.MapTypeId.TERRAIN,
+      panControl: true,
       zoomControl: true,
       zoomControlOptions: {
             style: google.maps.ZoomControlStyle.SMALL
