--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -17,5 +17,7 @@
         = f.label :admin_level_id, :class => 'label'
         = f.text_field :admin_level_id, :class => 'text_field'
   .group.navform.wat-cf
-    = f.submit t(:save), :class => 'button'
+    - content_tag :button, :type => :submit, :class => 'button' do
+      = image_tag "icons/tick.png"
+      =t(:save)
     = link_to t(:back), locations_path, :class => 'button'
