--- a/app/views/shared/_login_links.html.haml
+++ b/app/views/shared/_login_links.html.haml
@@ -1,5 +1,6 @@
-.login_links
-  - if user_signed_in?
-    %li= link_to(t(:logout), destroy_user_session_path)
-  - else
-    %li= link_to(t(:login), new_user_session_path)
+%ul.wat-cf
+  %li
+    - if user_signed_in?
+      = link_to(t(:logout), destroy_user_session_path, :class=>'logout')
+    - else
+      = link_to(t(:login), new_user_session_path, :class=>'login')
