--- a/app/views/js/_show-map_js.haml
+++ b/app/views/js/_show-map_js.haml
@@ -31,7 +31,7 @@
       $.each(geojson.features, function(i, feature) {
         var event_marker = new GeoJSON(feature.geometry, null);
         event_marker.setMap(map);
-        var content_string = renderJSON(feature.properties);
+        var content_string = renderJSONEvent(feature.properties);
         var info_window = new google.maps.InfoWindow({content: content_string});
         google.maps.event.addListener(event_marker, 'click', function() {
           info_window.open(map, event_marker);
@@ -59,7 +59,7 @@
         marker_opts = { animation: google.maps.Animation.DROP }
         var event_marker = new GeoJSON(feature.geometry, marker_opts);
         event_marker.setMap(map);
-        var content_string = renderJSON(feature.properties);
+        var content_string = renderJSONEvent(feature.properties);
         var info_window = new google.maps.InfoWindow({content: content_string});
         google.maps.event.addListener(event_marker, 'click', function() {
           info_window.open(map, event_marker);
