--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,3 +33,4 @@
                 Copyright &copy; #{Time.now.year} nomad labs.
         #sidebar
           = yield :sidebar
+          = render 'shared/user_settings'
