--- a/app/views/shared/_locale_links.html.haml
+++ b/app/views/shared/_locale_links.html.haml
@@ -4,3 +4,5 @@
   =link_to 'de', url_for(:locale => 'de')
   |
   =link_to 'ur', url_for(:locale => 'ur')
+  |
+  =link_to 'fr', url_for(:locale => 'fr')
